amf-cli/shared/src/test/resources/graphql-federation/tck/apis/invalid/arguments-requires.report
ModelId: file://amf-cli/shared/src/test/resources/graphql-federation/tck/apis//invalid/arguments-requires.graphql
Profile: GraphQL
Conforms: false
Number of results: 1

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#unmatched-field-in-field-set
  Message: Cannot find property with name birthday when resolving fieldSet
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql-federation/tck/apis/invalid/arguments-requires.graphql#/declares/shape/Person
  Property: 
  Range: 
  Location: 
